fix: scroll event does not work when overflow hidden on root

--- a/src/containers/Layout/Layout.scss
+++ b/src/containers/Layout/Layout.scss
@@ -7,7 +7,7 @@
   grid-template-columns: minmax(1em, 1fr) minmax(0, 40em) minmax(1em, 1fr);
   grid-template-rows: 155px minmax(500px, 1fr) 200px;
   grid-template-areas: "header header header" ". main ." "footer footer footer";
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .header {
