--- a/src/index.scss
+++ b/src/index.scss
@@ -6,8 +6,6 @@ body {
   font-family: 'Oxygen', sans-serif;
   min-width:max-content;
   min-height: max-content;
-}
-
-#root {
   overflow-x: hidden;
 }
+
